// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert button renders the component with props 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid #FF4539;
  border-radius: 8px;
  color: #FFFFFF;
  background: #FF4539;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled),
.c0:focus:not(:disabled) {
  box-shadow: inset 0 0 0 2px #FF4539,inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Alert
</button>
`;

exports[`Compact button renders the component with props 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 6px 16px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 14px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  border-radius: 8px;
  color: #FFFFFF;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled),
.c0:focus:not(:disabled) {
  box-shadow: inset 0 0 0 2px linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%),inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Compact
</button>
`;

exports[`Disabled button renders the component with props 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  border-radius: 8px;
  color: #FFFFFF;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled),
.c0:focus:not(:disabled) {
  box-shadow: inset 0 0 0 2px linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%),inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
  disabled=""
>
  Disabled
</button>
`;

exports[`Full width button renders the component with props 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  border-radius: 8px;
  color: #FFFFFF;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled),
.c0:focus:not(:disabled) {
  box-shadow: inset 0 0 0 2px linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%),inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Full width
</button>
`;

exports[`Large button renders the component with props 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 20px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  border-radius: 8px;
  color: #FFFFFF;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled),
.c0:focus:not(:disabled) {
  box-shadow: inset 0 0 0 2px linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%),inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Large
</button>
`;

exports[`Left icon button renders the component with props 1`] = `
.c1 {
  display: block;
  margin-left: 8px;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  border-radius: 8px;
  color: #FFFFFF;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled),
.c0:focus:not(:disabled) {
  box-shadow: inset 0 0 0 2px linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%),inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  <div>
    My icon
  </div>
  <span
    class="c1"
  >
    Left icon
  </span>
</button>
`;

exports[`Link button renders the component with props 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #3B46C4;
  background: transparent;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: none;
}

.c0:hover:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Link
</button>
`;

exports[`Link contrast button renders the component with props 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background: transparent;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: none;
}

.c0:hover:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Link contrast
</button>
`;

exports[`Primary button renders the component with props with no a11y violations 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  border-radius: 8px;
  color: #FFFFFF;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled),
.c0:focus:not(:disabled) {
  box-shadow: inset 0 0 0 2px linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%),inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Primary
</button>
`;

exports[`Primary contrast button renders the component with props 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid #FFFFFF;
  border-radius: 8px;
  background: #FFFFFF;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled),
.c0:focus:not(:disabled) {
  box-shadow: inset 0 0 0 2px #FFFFFF,inset 0 0 0 4px linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  outline: none;
}

.c0:hover:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Primary contrast
</button>
`;

exports[`Right icon button renders the component with props 1`] = `
.c1 {
  display: block;
  margin-right: 8px;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  border-radius: 8px;
  color: #FFFFFF;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled),
.c0:focus:not(:disabled) {
  box-shadow: inset 0 0 0 2px linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%),inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  <span
    class="c1"
  >
    Right icon
  </span>
  <div>
    My icon
  </div>
</button>
`;

exports[`Secondary button renders the component with props 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid #EFEFEF;
  border-radius: 8px;
  color: #4A545E;
  background: #EFEFEF;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: inset 0 0 0 2px linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
}

.c0:active:not(:disabled),
.c0:focus:not(:disabled) {
  box-shadow: inset 0 0 0 4px linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  outline: none;
}

.c0:hover:not(:disabled) {
  color: #4A545E;
  background-color: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  box-shadow: none;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Secondary
</button>
`;

exports[`Secondary contrast button renders the component with props 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid transparent;
  border-radius: 8px;
  color: #FFFFFF;
  background: transparent;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: inset 0 0 0 2px #FFFFFF;
}

.c0:active:not(:disabled),
.c0:focus:not(:disabled) {
  box-shadow: inset 0 0 0 2px #FFFFFF;
  outline: none;
}

.c0:hover:not(:disabled) {
  background-color: transparent;
  box-shadow: inset 0 0 0 2px #FFFFFF;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Secondary contrast
</button>
`;

exports[`Small button renders the component with props 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 24px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  border-radius: 8px;
  color: #FFFFFF;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled),
.c0:focus:not(:disabled) {
  box-shadow: inset 0 0 0 2px linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%),inset 0 0 0 4px #FFFFFF;
  outline: none;
}

.c0:hover:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Small
</button>
`;

exports[`Warning button renders the component with props 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 14px 32px;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border: 1px solid #FF9F0A;
  border-radius: 8px;
  color: #2C3246;
  background: #FF9F0A;
  -webkit-transition: all 140ms ease-in-out;
  transition: all 140ms ease-in-out;
}

.c0:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled),
.c0:focus:not(:disabled) {
  box-shadow: inset 0 0 0 2px #FF9F0A,inset 0 0 0 4px #2C3246;
  outline: none;
}

.c0:hover:not(:disabled) {
  box-shadow: none;
}

.c0:active:not(:disabled) {
  opacity: 0.4;
}

.c0:disabled {
  cursor: not-allowed;
  opacity: 0.3;
}

<button
  class="c0"
>
  Warning
</button>
`;
